Corrected typo on code snippets

--- a/hands-on-challenges/1.-deploy-to-a-sandbox.md
+++ b/hands-on-challenges/1.-deploy-to-a-sandbox.md
@@ -34,7 +34,7 @@ Authenticate your SFDX CLI in the terminal to one of the trailhead org's created
 * Use [sfdx force:mdapi:deploy](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_mdapi.htm#cli_reference_deploy)  in your terminal \(use the -h flag to understand usage\) to deploy this code base to the org
 
   ```text
-  sfdx force:mdapi:deploy -u <playgound-1> -d mdapi -w 30
+  sfdx force:mdapi:deploy -u <playground-1> -d mdapi -w 30
   ```
 
 {% hint style="danger" %}
@@ -46,13 +46,13 @@ If you get below error delete mdapi\lwc\jsconfig.json
 #### Assign the dreamhouse permission set to the default user using [sfdx force:user:permset:assign](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_user.htm#cli_reference_permset_assign)
 
 ```text
-sfdx force:user:permset:assign -u <playgound-1> -n dreamhouse
+sfdx force:user:permset:assign -u <playground-1> -n dreamhouse
 ```
 
 #### Import some the data using [sfdx force:data:tree:import](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_data.htm#cli_reference_tree_import)
 
 ```text
-sfdx force:data:tree:import -p ./data/sample-data-plan.json -u playgound-1
+sfdx force:data:tree:import -p ./data/sample-data-plan.json -u playground-1
 ```
 
 #### Make the following changes in the org
@@ -111,7 +111,7 @@ sfdx force:mdapi:retrieve -w 30 -u <playground-1> -r <temp-directory> -k <path-t
 * Utlize [sfdx force:mdapi:deploy](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_mdapi.htm#cli_reference_deploy)  in your terminal \(The reference to documentation is attached or use the -h flag to understand usage\) to deploy this code base to the org.
 
 ```text
-sfdx force:mdapi:deploy -u <playgound-2> -d mdapi -w 30
+sfdx force:mdapi:deploy -u <playground-2> -d mdapi -w 30
 ```
 
 Once the metadata is successfully committed, commit your changes to the repo.
