--- a/hands-on-challenges/1.-deploy-to-a-sandbox.md
+++ b/hands-on-challenges/1.-deploy-to-a-sandbox.md
@@ -37,12 +37,6 @@ Authenticate your SFDX CLI in the terminal to one of the trailhead org's created
   sfdx force:mdapi:deploy -u <playground-1> -d mdapi -w 30
   ```
 
-{% hint style="danger" %}
-If you get below error delete mdapi\lwc\jsconfig.json
-{% endhint %}
-
-![](../.gitbook/assets/image%20%2816%29%20%282%29%20%282%29%20%282%29%20%282%29%20%282%29%20%282%29%20%282%29.png)
-
 #### Assign the dreamhouse permission set to the default user using [sfdx force:user:permset:assign](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_user.htm#cli_reference_permset_assign)
 
 ```text
@@ -60,7 +54,7 @@ sfdx force:data:tree:import -p ./data/sample-data-plan.json -u playground-1
 * Set **Compliance Categorization** as **PII** to all fields in **Property\_\_c** object
   * Open Playground
   * Setup --&gt; Object Manager --&gt; Search **Property** in Object finder--&gt; Fields & Relationships --&gt; Address --&gt; Edit --&gt; set Compliance Categorization as PII
-  * Follow this step in all the fields in Property object
+  * Follow this step in **ALL** the fields in **Property** object
 * Create a field in property object and add it to layout
 
   * Setup --&gt; Object Manager --&gt; Search **Property** in Object finder--&gt; Fields & Relationships --&gt; New --&gt; with below details
