updated and remove

--- a/hands-on-challenges/2.-using-source-format.md
+++ b/hands-on-challenges/2.-using-source-format.md
@@ -16,7 +16,7 @@
 * **Open a new folder** where you wish to create the source format project
 
 ```text
-sfdx force:project:create -n dxatscale101-source -t empty --apiversion 51.0
+sfdx force:project:create -n dxatscale101-source -t empty
 ```
 
 #### **Convert the mdapi project used in 'Deploy to a Sandbox' challenge to source format** 
@@ -49,18 +49,18 @@ ERROR running force:mdapi:convert:  Unexpected file found in package directory: 
 
 Observe the difference between mdapi and source format. Object Metadata is decomposed into multiple files, this helps when you have a large project with multiple objects having a large amount of fields. Tracking the changes in fields and record types is relatively easy and time saving. 
 
-All challenges from here on will use source format 
+All challenges from here on will use **source format** 
 
 {% hint style="warning" %}
 When running `sfdx force:mdapi:convert` LWC bundle is missing .js-meta.xml file. This is sfdx CLI bug [https://github.com/forcedotcom/cli/issues/723](https://github.com/forcedotcom/cli/issues/723)  you can copy .js-meta.xml file from [https://github.com/dxatscale/dxatscale101/tree/master/mdapi/lwc](https://github.com/dxatscale/dxatscale101/tree/master/mdapi/lwc) 
 {% endhint %}
 
 * Open a new source project in VSCode
-* Delete force-app folder
-* Replace force-app with dreamhouse-app in the sfdx-project.json file
+* **Delete** force-app folder
+* **Replace** force-app with dreamhouse-app in the sfdx-project.json file
 
 {% hint style="danger" %}
-Ensure you change sourceApiVersion in your sfdx-project.json to 48.0 
+Ensure you change sourceApiVersion in your sfdx-project.json to 52.0 
 {% endhint %}
 
 ```text
@@ -73,7 +73,7 @@ Ensure you change sourceApiVersion in your sfdx-project.json to 48.0
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "48.0"
+  "sourceApiVersion": "52.0"
 }
 ```
 
@@ -84,7 +84,7 @@ Ensure you change sourceApiVersion in your sfdx-project.json to 48.0
   * Setup --&gt; Object Manager --&gt; Search **Broker** in Object finder--&gt; Fields & Relationships --&gt; Email --&gt; Edit --&gt; set Compliance Categorization as GDPR
   * Follow this step in all the fields in Broker object
 * Setup a path on property status
-  * Setup --&gt; Path Settings --&gt; new path --&gt; use below details on Name and Record Type page and click Next--&gt; Fields and Text page no changes click next --&gt; Activate the path click Next
+  * Setup --&gt; Path Settings --&gt; new path --&gt; use below details on Name and Record Type page and click Next--&gt; Fields and Text page no changes click next --&gt; Activate the path and then click Finish
 
     | Field | Value |
     | :--- | :--- |
@@ -93,20 +93,20 @@ Ensure you change sourceApiVersion in your sfdx-project.json to 48.0
     | Object | Property |
     | Record Type | Auto populated as Master |
     | Picklist | Status |
-* Add the property status path to Property record page
-  * Open Dreamhouse app in App launcher
+* Add the property status **path** to Property record page
+  * Open **Dreamhouse app** in App launcher
   * Open Properties Record tab and open any record
-  * Click Setup gear Icon --&gt; Edit page --&gt; search path in component finder --&gt; add the path component below the compact layout
-  * Save the changes and click back
+  * Click Setup gear Icon --&gt; Edit page --&gt; search **path** in component finder --&gt; add the path component below the compact layout
+  * **Save** the changes and click back
 
 #### Retrieve the changes in the org using one of the below [sfdx force:source:retrieve](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_source.htm#cli_reference_retrieve) commands \(Use the -h flag to understand usage\)
 
 ```text
-sfdx force:source:retrieve -u <playgound-1> -x <path to package.xml>
+sfdx force:source:retrieve -u <playground-1> -x <path to package.xml>
 
-sfdx force:source:retrieve -u <playgound-1> -m <metadatatype:medataname>
+sfdx force:source:retrieve -u <playground-1> -m <metadatatype:medataname>
 
-sfdx force:source:retrieve -u <playgound-1> -p <sourcepath to retrieve>
+sfdx force:source:retrieve -u <playground-1> -p <sourcepath to retrieve>
 ```
 
 #### Make the following changes in the local source code
@@ -216,7 +216,7 @@ sfdx force:source:retrieve -u <playgound-1> -p <sourcepath to retrieve>
 #### Deploy the changes to both the playground using [sfdx force:source:deploy](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_source.htm#cli_reference_deploy)  command \(The reference to documentation is attached or use the -h flag to understand usage\)
 
 ```text
-sfdx force:source:deploy -u <playgound-1> -p dreamhouse-app -w 30
+sfdx force:source:deploy -u <playground-1> -p dreamhouse-app -w 30
 ```
 
 Once the metadata is successfully committed, commit your changes to the repo.
