Added bold sections for emphasis

--- a/hands-on-challenges/2.-using-source-format.md
+++ b/hands-on-challenges/2.-using-source-format.md
@@ -108,11 +108,12 @@ sfdx force:source:retrieve -u <playground-1> -m <metadatatype:medataname>
 
 sfdx force:source:retrieve -u <playground-1> -p <sourcepath to retrieve>
 ```
+*Take the time to discuss and understand these commands*
 
 #### Make the following changes in the local source code
 
 * Update all the fields in **Property\_\_c** to change the Compliance Categorization from PII to GDPR
-* let add Broker image to Broker card component in property detail page. Replace brokerCard.js and brokerCard.html with below snippet and create a new file brokerCard.css with below snippets  
+* Let's add a Broker image to Broker card component in property detail page. Replace **brokerCard.js** and **brokerCard.html** with below snippet and create a new file brokerCard.css with below snippets  
   
   _brokerCard.html_
 
@@ -249,5 +250,5 @@ Once the metadata is successfully committed, commit your changes to the repo.
 
 ### **Recap**
 
-Congrats! Now you have understood how to create a new sfdx source project and convert an existing project into source format, and also understood the similarity between source and mdapi. Please note that source format is only a local decomposition done by the CLI and the Salesforce Org doesnt understand source format.
+**Congrats!** Now you have understood how to create a new sfdx source project and convert an existing project into source format, and also understood the similarity between source and mdapi. Please note that source format is only a local decomposition done by the CLI and the Salesforce Org doesnt understand source format.
 
