fixed up the snippet on property cls that was causing deployment issues

--- a/hands-on-challenges/3.-using-a-package.md
+++ b/hands-on-challenges/3.-using-a-package.md
@@ -14,9 +14,9 @@
 #### **Install the star rating component from AppExchange to playground 1**
 
 * Open Playground 1
-* Install a Managed package from appexchange using this url &lt;_playgroundomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t5I000001ecttQAA
-* Install a Managed package from appexchange using this url &lt;_playgroundomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t6F000001D6LOQA0
-* Install a Unlocked package using this installation url &lt;_playgroundomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t6F000001ZL7yQAG
+* Install a Managed package from appexchange using this url &lt;_YourPlayGroundDomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t5I000001ecttQAA
+* Install a Managed package from appexchange using this url &lt;_YourPlayGroundDomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t6F000001D6LOQA0
+* Install a Unlocked package using this installation url &lt;_YourPlayGroundDomain_&gt;/packagingSetupUI/ipLanding.app?apvId=04t6F000001ZL7yQAG
 
 #### **Create a rating Field in property object**
 
@@ -50,7 +50,7 @@ public with sharing class PropertyController {
         return [
             SELECT Id, address__c, city__c, state__c, description__c, price__c, baths__c, beds__c, thumbnail__c, location__latitude__s, location__longitude__s, Rating__c, Features__c
             FROM property__c
-            WHERE (title__c LIKE :key OR city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
+            WHERE (city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
             WITH SECURITY_ENFORCED
             ORDER BY price__c
             LIMIT 100
@@ -74,11 +74,11 @@ public with sharing class PropertyController {
         result.totalItemCount = [
             SELECT COUNT()
             FROM property__c
-            WHERE (title__c LIKE :key OR city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
+            WHERE (city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
         ];
         result.records = [ SELECT Id, address__c, city__c, state__c, description__c, price__c, baths__c, beds__c, thumbnail__c, Rating__c,Features__c
             FROM property__c
-            WHERE (title__c LIKE :key OR city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
+            WHERE (city__c LIKE :key OR tags__c LIKE :key) AND price__c <= :maxPrice AND beds__c >= :minBedrooms AND baths__c >= :minBathrooms
             WITH SECURITY_ENFORCED
             ORDER BY price__c
             LIMIT :pSize
@@ -109,7 +109,7 @@ public with sharing class PropertyController {
         }
 
         return [
-            SELECT Id, Title
+            SELECT Id
             FROM ContentVersion
             WHERE ContentDocumentId IN :contentIds AND IsLatest = TRUE
             WITH SECURITY_ENFORCED
@@ -169,7 +169,7 @@ Use [sfdx force:source:deploy](https://developer.salesforce.com/docs/atlas.en-us
         }
     ],
     "namespace": "",
-    "sourceApiVersion": "48.0",
+    "sourceApiVersion": "52.0",
     "packageAliases": {
         "dxatscale-base":"04t6F000001ZL7yQAG",
         "LWCC":"04t5I000001ecttQAA",
