Replaced JWT auth to sfdx authURL details and updated SO shape

--- a/hands-on-challenges/4.-scratch-org-introduction.md
+++ b/hands-on-challenges/4.-scratch-org-introduction.md
@@ -13,13 +13,13 @@
 #### **Create dreamhouse community**
 
 * Enable Experience Cloud on Playground 1
-  * Go to setup --&gt; search _digital experiences -&gt; select settings_ in quick find --&gt; Enable Digital Experience --&gt; save
+  * Go to setup --&gt; search **_digital experiences -&gt; select settings_** in quick find --&gt; Enable Digital Experience --&gt; save
 * Enable experience bundle on Playground 1
-  * Go to setup --&gt; search _digital experiences -&gt; select settings_ in quick find
+  * Go to setup --&gt; search **_digital experiences -&gt; select settings_** in quick find
 
      --&gt; Enable ExperienceBundle Metadata API --&gt; save
 * Create community on Playground 1
-  * Go to setup --&gt; search _all sites_ in quick find --&gt; New Community --&gt; Customer Account Portal --&gt; Get started --&gt; name = dreamhouseportal --&gt; Create --&gt; Click workspaces on the top left corner --&gt; Administration --&gt; Activate community
+  * Go to setup --&gt; search **_all sites_** in quick find --&gt; New Community --&gt; Customer Account Portal --&gt; Get started --&gt; name = dreamhouseportal --&gt; Create --&gt; Click workspaces on the top left corner --&gt; Administration --&gt; Activate community
 
 #### **Retrieve the community from the org**
 
@@ -115,7 +115,7 @@ Add the below _package.xml_ to your project root
     <name>StaticResource</name>
     <members>SiteSamples</members>
   </types>
-  <version>48.0</version>
+  <version>52.0</version>
 </Package>
 ```
 
