--- a/hands-on-challenges/5.-scratch-org-shape.md
+++ b/hands-on-challenges/5.-scratch-org-shape.md
@@ -40,7 +40,7 @@
 
 #### Enable Contacts to Multiple Accounts 
 
-* Add ContactsToMultipleAccounts in features
+* Add **ContactsToMultipleAccounts** in features
 
 #### Set up a new Scratch Org
 
