Fix API Name Issue

--- a/hands-on-challenges/5.-scratch-org-shape.md
+++ b/hands-on-challenges/5.-scratch-org-shape.md
@@ -134,10 +134,10 @@ Try [`sfdx sfpowerkit:package:dependencies:install`](https://github.com/accentur
 | Display Format | Ins-{000000} |
 | Starting Number | 1 |
 
-* Create a Master detail field to _**Contact**_ object with API name _Customer\_\_c\_
-* Create a Master detail field to _Property\_\_c _object with API name \_Property\_\_c\_
-* Create a field with data type Date and API name _Inspection\_Date\_\_c\_
-* Create a field with data type Time and API name _Time\_Slot\_\_c\_
+* Create a Master detail field to **Contact**_ object with API name Customer__c
+* Create a Master detail field to Property__c _object with API name Property__c
+* Create a field with data type Date and API name Inspection_Date__c
+* Create a field with data type Time and API name Time_Slot__c
 * Check the status using [sfdx force:source:status](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_source.htm#cli_reference_status)  command
 * Pull the changes using [sfdx force:source:pull](https://developer.salesforce.com/docs/atlas.en-us.sfdx_cli_reference.meta/sfdx_cli_reference/cli_reference_force_source.htm#cli_reference_pull)  command
 
