Replace 1 word on line 40

--- a/hands-on-challenges/2.-using-source-format.md
+++ b/hands-on-challenges/2.-using-source-format.md
@@ -37,7 +37,7 @@ Observe the difference between mdapi and source format. Object Metadata is decom
 
 All challenges from here on will use **source format**
 
-* Open a new source project in VSCode
+* Open the new source project in VSCode
 * **Delete** force-app folder
 * **Replace** force-app with dreamhouse-app in the sfdx-project.json file
 
