--- a/hands-on-challenges/5.-scratch-org-shape.md
+++ b/hands-on-challenges/5.-scratch-org-shape.md
@@ -72,7 +72,7 @@ Try [`sfdx sfpowerkit:package:dependencies:install`](https://github.com/accentur
 | Starting Number | 1             |
 
 * Create the following fields within Inspection Object:
-  * Create a Master detail field to **Contact\_\_c** object with Field name **Customer**
+  * Create a Master detail field to **Contact** object with Field name **Customer**
   * Create a Master detail field to **Property\_\_c** object with Field name **Property**
   * Create a field with data type Date and API name **Inspection\_Date**
   * Create a field with data type Time and API name **Time\_Slot**
