Typo fixed picked up and improving readability and context for the reader

--- a/challenges/challenges/1.-deploy-to-a-sandbox.md
+++ b/challenges/challenges/1.-deploy-to-a-sandbox.md
@@ -5,8 +5,8 @@
 * Get comfortable with CLI tools
 * Deploy a repo using MDAPI to a Salesforce org
 * Retrieve changes in an SF sandbox to a repo
-  * Mechanisms to retrieve metadata from an org
-  * Identifying the names of the component to be retrieved
+* Mechanisms to retrieve metadata from an org
+* Identifying the names of the component to be retrieved
 * Deploying the updated repo to a different org
 
 **Time to Complete** : 45 Minutes
@@ -15,19 +15,21 @@
 
 ### Setup
 
-Fork the DX@Scale repo to your GitHub account
+1. Fork the DX@Scale repo to your GitHub account
 
-* [https://github.com/dxatscale/dxatscale101](https://github.com/dxatscale/dxatscale101)
+  * [https://github.com/dxatscale/dxatscale101](https://github.com/dxatscale/dxatscale101)
 
+{% hint style="info" %}
 Instructions on how to fork a repo are available at the below link [https://docs.github.com/en/github/getting-started-with-github/fork-a-repo](https://docs.github.com/en/github/getting-started-with-github/fork-a-repo)
+{% endhint %}
 
-Clone the forked repo from your GitHub account to a local repo
+2. Clone the forked repo from your GitHub account to a local repo
 
-Open up the project in VS Code
+3. Open up the project in **VS Code**
 
-Authenticate your SFDX CLI in the terminal to one of the trailhead org's created in the [prerequisites](../prerequisites.md)
+4. Authenticate your SFDX CLI in the terminal to one of the trailhead org's created in the [prerequisites](../prerequisites.md)
 
-* [https://developer.salesforce.com/docs/atlas.en-us.sfdx\_dev.meta/sfdx\_dev/sfdx\_dev\_auth\_web\_flow.htm](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_dev.meta/sfdx\_dev/sfdx\_dev\_auth\_web\_flow.htm)
+  * [https://developer.salesforce.com/docs/atlas.en-us.sfdx\_dev.meta/sfdx\_dev/sfdx\_dev\_auth\_web\_flow.htm](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_dev.meta/sfdx\_dev/sfdx\_dev\_auth\_web\_flow.htm)
 
 ### Deploy the repo to the authenticated org
 
@@ -38,7 +40,7 @@ Authenticate your SFDX CLI in the terminal to one of the trailhead org's created
     ```
 
 {% hint style="info" %}
-Did it fail? delete the jsconfig.json file in `mdapi/lwc/jsconfig.json`
+Did it fail? you will need to delete the jsconfig.json file in your `mdapi/lwc/jsconfig.json`
 {% endhint %}
 
 ### Assign the dreamhouse permission set to the default user using [sfdx force:user:permset:assign](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_user.htm#cli\_reference\_permset\_assign)
@@ -53,7 +55,7 @@ sfdx force:user:permset:assign -u <playground-1> -n dreamhouse
 sfdx force:data:tree:import -p ./data/sample-data-plan.json -u <playground-1>
 ```
 
-### Make the following changes in the org
+### Make the following changes your org
 
 * Set **Compliance Categorization** as **PII** to all fields in **Property\_\_c** object
   * Open Playground
@@ -95,7 +97,7 @@ sfdx force:data:tree:import -p ./data/sample-data-plan.json -u <playground-1>
 
 ### Retrieve all the changes from the org
 
-* Utilize [sfdx force:mdapi:describemetadata](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_describemetadata) and [sfdx force:mdapi:listmetadata](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_listmetadata) to create your package.xml which should only include the changes to be retrieved from the org
+* Utilize [sfdx force:mdapi:describemetadata](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_describemetadata) and [sfdx force:mdapi:listmetadata](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_listmetadata) to create a new **package.xml** which should only include the changes to be retrieved from your playground-1.
 * Utlize [sfdx force:mdapi:retrieve](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_retrieve) (The reference to documentation is attached or use the -h flag to understand usage) to deploy this code base to the org.
 * Once retrieved, ensure you copy the metadata to the right segments in your repo
 
@@ -103,7 +105,7 @@ sfdx force:data:tree:import -p ./data/sample-data-plan.json -u <playground-1>
 sfdx force:mdapi:retrieve -w 30 -u <playground-1> -r <temp-directory> -k <path-to-your-new-package.xml>
 ```
 
-### Redeploy your changes to another trailhead org
+### Redeploy your changes to the other trailhead org
 
 * Utlize [sfdx force:mdapi:deploy](https://developer.salesforce.com/docs/atlas.en-us.sfdx\_cli\_reference.meta/sfdx\_cli\_reference/cli\_reference\_force\_mdapi.htm#cli\_reference\_deploy) in your terminal (The reference to documentation is attached or use the -h flag to understand usage) to deploy this code base to the org.
 
@@ -123,7 +125,7 @@ sfdx force:user:permset:assign -u <playground-2> -n dreamhouse
 sfdx force:data:tree:import -p ./data/sample-data-plan.json -u playground-2
 ```
 
-Once the metadata is successfully committed, commit your changes to the repo.
+Once the metadata is successfully deployed your work into your **<playground-2>**, commit and push your changes to your dx@scale101 repo.
 
 ## Recap
 
